Atualizando o twig e corrigindo icones do fontawesome

--- a/application/src/Views/error/generic-error.html.twig
+++ b/application/src/Views/error/generic-error.html.twig
@@ -22,7 +22,8 @@
                 home do sistema. Lamento...</p>
         {% endif %}
     </div>
+    <br />
     <a href="/home/index">
-        <button><i class="fa-solid fa-person-walking-arrow-loop-left"></i> Home</button>
+        <button><i class="fas fa-home"></i> Home</button>
     </a>
 {% endblock %}
