--- a/application/src/Views/partials/header.html.twig
+++ b/application/src/Views/partials/header.html.twig
@@ -9,7 +9,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="/home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="/home"><i class="fas fa-home"></i> Home</a></li>
 {#                    <li class="nav-item"><a class="nav-link" href="#!">About</a></li>#}
 {#                    <li class="nav-item dropdown">#}
 {#                        <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"#}
@@ -26,7 +26,7 @@
                 </ul>
                 <form class="d-flex">
                     <a class="btn btn-outline-dark mt-auto" href="/sistema/create">
-                        <i class="fa-regular fa-square-plus"></i> Add sistema
+                        <i class="fas fa-plus"></i> Add sistema
                     </a>
                 </form>
             </div>
