--- a/application/src/Views/sistema/form.html.twig
+++ b/application/src/Views/sistema/form.html.twig
@@ -14,7 +14,7 @@
     <div class="container px-4 px-lg-5 mt-0">
         <div class="row justify-content-center">
             {% if sistema.id %}
-                <form method="post" action="/sistema/edit/id={{ sistema.id }}">
+            <form method="post" action="/sistema/edit/id={{ sistema.id }}">
                 <input type="hidden" name="id" value="{{ sistema.id }}">
             {% else %}
                 <form method="post" action="/sistema/insert">
@@ -23,21 +23,21 @@
                     <label for="nome">Nome</label>
                     <input type="text" class="form-control" id="nome" name="nome"
                            {% if sistema.nome %}value="{{ sistema.nome }}"{% endif %}
-                            maxlength="45"
+                            maxlength="45" required
                     >
                 </div>
                 <div class="form-group mt-3">
                     <label for="link">Link</label>
                     <input type="text" class="form-control" id="link" name="link"
                            {% if sistema.link %}value="{{ sistema.link }}"{% endif %}
-                            maxlength="255"
+                            maxlength="255" required
                     >
                 </div>
                 <div class="form-group mt-3">
                     <label for="descricao">Descrição</label>
                     <input type="text" class="form-control" id="descricao" name="descricao"
                            {% if sistema.descricao %}value="{{ sistema.descricao }}"{% endif %}
-                            maxlength="255"
+                            maxlength="255" required
                     >
                 </div>
                 {% if sistema.id %}
@@ -52,41 +52,18 @@
                         </select>
                     </div>
                 {% endif %}
-                <button type="submit" class="btn btn-primary mt-3">{% if sistema.id %}Editar{% else %}Cadastrar{% endif %}</button>
+                <button type="submit" class="btn btn-primary mt-3">
+                    {% if sistema.id %}
+                        <i class="far fa-edit"></i> Editar
+                    {% else %}
+                        <i class="fas fa-check"></i> Cadastrar
+                    {% endif %}
+                </button>
+                <button type="button" class="btn btn-secondary mt-3" style="float: right">
+                    <a href="/home/index" style="color: #ffffff"><i class="fas fa-home"></i> Home
+                    </a>
+                </button>
             </form>
         </div>
     </div>
-    {#        <div class="container px-4 px-lg-5 mt-0"> #}
-    {#            <div class="row justify-content-center"> #}
-    {#                <div class="card-body"> #}
-    {#                    <dt>ID:</dt> #}
-    {#                    <dd>{{ sistema.id }}</dd> #}
-    {#                    <dt>NOME:</dt> #}
-    {#                    <dd>{{ sistema.nome }}</dd> #}
-    {#                    <dt>LINK:</dt> #}
-    {#                    <dd>{{ sistema.link }} <a href="{{ sistema.link }}" target="_blank"><i #}
-    {#                                    class="fas fa-external-link-alt"></i></a></dd> #}
-    {#                    <dt>DESCRIÇÃO:</dt> #}
-    {#                    <dd>{{ sistema.descricao }}</dd> #}
-    {#                    <dt>STATUS:</dt> #}
-    {#                    <dd>{{ sistema.getStatusToHuman }}</dd> #}
-    {#                </div> #}
-    {#            </div> #}
-    {#            <div class="row justify-content-center"> #}
-    {#                <div class="col-md-10"></div> #}
-    {#                <div class="col-md-1 float-start"> #}
-    {#                    <button> #}
-    {#                        <a href="/sistema/edit/id={{ sistema.id }}"> #}
-    {#                            <i class="fa-regular fa-pen-to-square"></i> Editar #}
-    {#                        </a> #}
-    {#                    </button> #}
-    {#                </div> #}
-    {#                <div class="col-md-1"> #}
-    {#                    <button> #}
-    {#                        <a href="/home/index"><i class="fa-solid fa-person-walking-arrow-loop-left"></i> Home #}
-    {#                        </a> #}
-    {#                    </button> #}
-    {#                </div> #}
-    {#            </div> #}
-    {#        </div> #}
 {% endblock %}
