--- a/application/src/Views/sistema/view.html.twig
+++ b/application/src/Views/sistema/view.html.twig
@@ -38,7 +38,7 @@
             </div>
             <div class="col-md-1">
                 <button>
-                    <a href="/home/index"><i class="fa-solid fa-person-walking-arrow-loop-left"></i> Home
+                    <a href="/home/index"><i class="fas fa-home"></i> Home
                     </a>
                 </button>
             </div>
