--- a/application/src/Views/layout.html.twig
+++ b/application/src/Views/layout.html.twig
@@ -15,6 +15,8 @@
 {#    <script src="https://kit.fontawesome.com/3a4b1e55a0.js" crossorigin="anonymous"></script>#}
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="/assets/css/styles.css" rel="stylesheet"/>
+    <script src="/assets/js/jquery-3.min.js"></script>
+    <script src="/assets/js/sweetalert.min.js"></script>
     {% block head %} {% endblock %}
 </head>
 <body>
