--- a/application/src/Views/sistema/form.html.twig
+++ b/application/src/Views/sistema/form.html.twig
@@ -60,8 +60,13 @@
                     {% endif %}
                 </button>
                 <button type="button" class="btn btn-secondary mt-3" style="float: right">
-                    <a href="/home/index" style="color: #ffffff"><i class="fas fa-home"></i> Home
-                    </a>
+                    {% if sistema.id %}
+                        <a href="/sistema/view/id={{ sistema.id }}" style="color: #ffffff">
+                            <i class="far fa-window-close"></i> Cancelar
+                        </a>
+                    {% else %}
+                        <a href="/home/index" style="color: #ffffff"><i class="fas fa-home"></i> Home</a>
+                    {% endif %}
                 </button>
             </form>
         </div>
