--- a/application/src/Views/sistema/view.html.twig
+++ b/application/src/Views/sistema/view.html.twig
@@ -11,9 +11,50 @@
     </style>
 {% endblock %}
 {% block content %}
+    <script>
+        function del(id){
+            Swal.fire({
+                title: 'Você tem certeza?',
+                text: "Caso delete esse registro, ele não aparecerá mais na lista de itens na página inicial do sistema.",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Sim',
+                cancelButtonText: 'Não'
+            }).then((result) => {
+                if (result.value) {
+                    Swal.fire({
+                        title: 'Registro Deletado!',
+                        text: 'Pronto. Esse registro não aparecerá mais na listagem da página inicial.',
+                        icon: 'success',
+                        showConfirmButton: false
+                    });
+                    $.ajax({
+                        type:"GET",
+                        url: "/sistema/remove/id={{ sistema.id }}", //url function delete in controller
+                        success:function(data){ //when success will reload page after 3 second
+                            window.setTimeout( function(){
+                                location.href = '/home';
+                            }, 3000 );
+                        }
+                    });
+                }
+            })
+        }
+    </script>
     <div class="container px-4 px-lg-5 mt-0">
+        {% if sistema.status %}
+        <div class="row justify-content-center" style="text-align: right">
+            <div class="col-md-12">
+                <button type="button" class="btn btn-danger" onclick="del({{ sistema.id }})">
+                    <i class="far fa-trash-alt"></i> Excluir
+                </button>
+            </div>
+        </div>
+        {% endif %}
         <div class="row justify-content-center">
-            <div class="card-body">
+            <div class="card-body col-md-8">
                 <dt>ID:</dt>
                 <dd>{{ sistema.id }}</dd>
                 <dt>NOME:</dt>
@@ -28,17 +69,14 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-md-10"></div>
-            <div class="col-md-1 float-start">
-                <button>
-                    <a href="/sistema/edit/id={{ sistema.id }}">
-                        <i class="fa-regular fa-pen-to-square"></i> Editar
+            <div class="col-md-12" style="text-align: right">
+                <button type="submit" class="btn btn-primary">
+                    <a href="/sistema/edit/id={{ sistema.id }}" style="color: #ffffff">
+                        <i class="far fa-edit"></i> Editar
                     </a>
                 </button>
-            </div>
-            <div class="col-md-1">
-                <button>
-                    <a href="/home/index"><i class="fas fa-home"></i> Home
+                <button type="button" class="btn btn-secondary">
+                    <a href="/home/index" style="color: #ffffff"><i class="fas fa-home"></i> Home
                     </a>
                 </button>
             </div>
